--- a/hello.html
+++ b/hello.html
@@ -7,7 +7,7 @@
     <title>Hello</title>
 </head>
 <body>
-    <h1>Hello world</h1>
+    <h1 style="color:green;">Hello world</h1>
     <p>How are you '</p>
     <p> this is github version </p>
 </body>
